--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,39 @@
+@import url("https://fonts.googleapis.com/css2?family=Quicksand&family=Raleway&display=swap");
 *{
 	padding: 0;
 	margin: 0;
 	box-sizing: border-box;
+}
+
+:root {
+    --quicksand: "Quicksand", sans-serif;
+    --raleway: "Raleway", sans-serif;
+    --primary-color: #cc2020;
+    --ambient-color: #f8694a;
+    --accent-color: #30323a;
+    --cool-color: #156064;
+    font-size: 16px;
+    --p-1: 10px;
+    --p-2: 20px;
+    --p-3: 30px;
+    --p-5: 50px;
+    --p-10: 100px;
+}
+@media screen and (max-width: 576px) {
+    :root {
+        --p-1: 5px;
+        --p-2: 10px;
+        --p-3: 14px;
+        --p-5: 20px;
+        font-size: 12px;
+    }
+}
+html,
+body {
+    background: whitesmoke;
+    min-height: 100vh;
+    overflow-x: hidden;
+    font-family: var(--quicksand);
 }
 .logo_section{
 	margin-top: 4rem;
@@ -12,12 +44,9 @@
 h1{
 font-family: 'Roboto', sans-serif;
 }
-/* p{
-	font-family: 'Open Sans', sans-serif;
-} */
 .mens_cloth_heading{
 	
-	color: #ec615b;
+	color: var(--primary-color);
 	font-size: 2rem;
 }
 .logo{
@@ -60,17 +89,18 @@ font-family: 'Roboto', sans-serif;
 	text-align: center;
 	border: .8px dotted #fff;
 }
+
 /* dropdown css section */
 .product_categories_heading h1{
 	font-size: 1.5rem;
 	text-align: center;
-	border-top: 4px solid #ec615b;
+	border-top: 4px solid  var(--primary-color);
 	padding: 1rem;
 	text-transform: capitalize;
 }
 .product_categories_heading h1:hover{
 	
-	color:  #ec615b;
+	 color: var(--primary-color)
 	
 }
 
@@ -81,7 +111,7 @@ a {
   
 }
 a:hover{
-    color: #ec615b;
+    color: var(--primary-color)
      
 }
 .dropdown_btn_style a{
@@ -98,10 +128,10 @@ a:hover{
     margin-left: 6.5rem;
 }
 .dropdown-menu a:hover{
-    color: #ec615b;
+     color: var(--primary-color)
 }
-/* navbar boxes css */
 
+/* navbar boxes css */
 .categery_section2{
 	margin-top: 0rem;
 
@@ -109,19 +139,14 @@ a:hover{
 
 tabs .nav-link.active {
 
-    border-top: 2px solid #ec615b !important;
+    border-top: 2px solid  var(--primary-color) !important;
 }
 .nav-tabs .nav-item.show .nav-link, .nav-tabs .nav-link.active {
     color: #495057;
     background-color: #fff;
     border-color: #dee2e6 #dee2e6 #fff;
-     border-top: 2px solid #ec615b !important;
+     border-top: 2px solid  var(--primary-color)!important;
 }
-
-
-
-
-
 
 
 /* secons left */
@@ -129,62 +154,13 @@ tabs .nav-link.active {
 	margin-top: 4rem;
 }
 
-/* .myall_ulli ul{
-	margin: 0;
-	padding: 0;
-	display: flex;
-
-}
-.myall_ulli h1{
-	margin: 0;
-	padding: 0;
-	display: flex;
-
-}
-.myall_ulli ul li{
-	position: relative;
-	list-style: none;
-}
-.myall_ulli h1{
-	position: relative;
-	list-style: none;
-	color: #333;
-	cursor: pointer;
-	font-size: 1rem;
-	text-align: center;
-	
-}
-.myall_ulli h1:hover{
-	background: #86ff3b;
-	box-shadow: 0 0 0 4px #333, 0 0 0 6px #86ff3b;
-	
-	
-}
-.myall_ulli  h1 .content{
-	position: absolute;
-	bottom: 55px;
-	width: 400px;
-	background: #fff;
-	padding: 20px;
-	box-sizing: border-box;
-	border-radius: 4px;
-	visibility: hidden;
-	opacity: 0;
-	transition: 0.5s;
-		
-}
-.myall_ulli h1:hover .content{
-	visibility: visible;
-	opacity: 1;
-} */
-
 .myall_ulli p{
 	font-size: 1.2rem;
 	text-transform: capitalize;
 	text-align: center;
 }
 .myall_ulli p:hover{
-	 color: #ec615b;
+	 color: var(--primary-color);
 	}
 .myall_ulli{
 	position: relative;
@@ -213,23 +189,8 @@ tabs .nav-link.active {
 	padding: .5rem .5rem .5rem 2rem;
 }
 .content a:hover{
- color: #ec615b;
+ color: var(--primary-color);
 }
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 
 
@@ -245,19 +206,25 @@ tabs .nav-link.active {
 	margin-top: 5rem;
 }
 .btn_cart{
-	    padding: 12px 25px;
+	    padding: 10px 23px;
     border: none;
     color: #fff;
     font-size: 10px;
     text-transform: uppercase;
     letter-spacing: 1px;
     border: 2px solid #fff;
-    background: #ec615b;
+    outline:none;
+    background:  var(--primary-color);
     -webkit-transition: 0.5s all;
     -moz-transition: 0.5s all;
     -o-transition: 0.5s all;
     -ms-transition: 0.5s all;
     transition: 0.5s all;
+}
+.btn_cart:hover{
+	color: #fff;
+	background: var(--accent-color);
+	outline:none;
 }
 @media screen and (max-width:800px) {
 	.main_container{
@@ -303,7 +270,7 @@ tabs .nav-link.active {
     color: #495057;
     background-color: #fff;
     border-color: #dee2e6 #dee2e6 #fff;
-    border-top: 2px solid #ec615b !important;
+    border-top: 2px solid var(--primary-color) !important;
     font-size: .8rem;
     width: 7rem;
 }
@@ -314,4 +281,281 @@ tabs .nav-link.active {
     font-size: 0.6rem;
     width: 6rem;
 }
+}
+
+
+
+/* || == :: main-nav == || */
+.main-nav {
+    padding: 0.4rem;
+    background: var(--cool-color);
+    display: flex; 
+    align-items: center;
+     justify-content: flex-start;
+}
+.main-nav > ul {
+    width: 80%;
+    margin: 0;
+    list-style: none;
+    display: flex;
+    justify-content: flex-start; 
+}
+.main-nav > ul > li > a {
+    font-weight: bold;
+    color: white;
+    text-decoration: none;
+}
+.main-nav > ul > li > a:hover {
+    color: var(--ambient-color);
+}
+@media screen and (min-width: 310px) and (max-width: 620px) {
+    .main-nav {
+        display: none;
+    }
+}
+
+/* -- CUSTOM-STYLES -- */
+.megasubmenu {
+    padding: 20px;
+}
+@media (min-width: 992px) {
+    .dropdown .dropdown-toggle-category:after {
+        padding: 0 15px;
+        content: "\f03a";
+        font-family: "Font Awesome\ 5 Free";
+        font-weight: 900;
+        color: #fff;
+        line-height: 1;
+    }
+    .dropdown-menu .dropdown-toggle-custom:after {
+        padding: 0 15px;
+        content: "\f105";
+        font-family: "Font Awesome\ 5 Free";
+        font-weight: 900;
+        color: #000;
+        line-height: 2.4;
+    }
+    .dropdown-menu {
+        margin: 0;
+    }
+    .megasubmenu {
+        left: 100%;
+        top: 0;
+        min-height: 100%;
+        min-width: 500px;
+    }
+    .dropdown-menu > li:hover .megasubmenu {
+        display: block;
+    }
+    .megasubmenu .title {
+        font-weight: bold;
+        color: var(--ambient-color);
+    }
+    .megasubmenu li a {
+        font-size: 0.9rem;
+    }
+}
+
+/* ==== end: main-nav ==== */
+
+
+/* =======================allproduct collection section css start here====================== */
+.all_product_collections{
+	position: relative;
+	display: flex;
+	flex-wrap: wrap;
+	justify-content: center;
+	flex-direction: row;
+	margin: 0 0 3rem 0;
+
+}
+.box2{
+	 background: #fff;
+	position: relative;
+	width:24%;
+	height:22rem;
+	margin: 1rem .2rem 1rem .2rem;
+	 border-radius: 10px;
+    box-shadow: 1px 1px 5px 2px #ccc;
+	
+}
+.box2 img{
+	width:100%;
+	height:50%;
+	margin-top:.5rem; 
+}
+.box2 h1{
+	font-size: 1.2rem;
+	text-align: center;
+}
+.box2 h2{
+	font-size: 1rem;
+	text-align: center;
+}
+.box2 p{
+	font-size: .8rem;
+	text-align: center;
+	padding: .5rem;
+}
+.btn_cart2{
+		position: absolute;
+	top: 92%;
+	left: 50%;
+	transform: translate(-50%, -50%);
+	    padding: 8px 21px;
+    border: none;
+    color: #fff;
+    font-size: 9px;
+    text-transform: uppercase;
+    letter-spacing: 1px;
+    border: 2px solid #fff;
+    width:70%;
+    background:  var(--primary-color);
+    -webkit-transition: 0.5s all;
+    -moz-transition: 0.5s all;
+    -o-transition: 0.5s all;
+    -ms-transition: 0.5s all;
+    transition: 0.5s all;
+
+}
+@media screen and (max-width: 800px) {
+	.all_product_collections{
+	justify-content: space-around;
+	
+
+}
+	.box2{
+	position: relative;
+	width:47%;
+	height: 25rem;
+	
+}
+.box2 img{
+	width:100%;
+	height: 50%;
+}
+ .btn_cart2{
+	top: 90%;
+	left: 50%;
+	 padding: 10px 15px;
+    font-size: 10px;
+    border: 2px solid #fff;
+    width: 12rem;
+   
+}
+}
+/* childern collection css here */
+.heading_children_collection h1{
+	font-size: 1.8rem;
+	text-align: center;
+	 color: var(--primary-color);
+	 text-transform: capitalize;
+}
+.mens_collections{
+	position: relative;
+	display: flex;
+	flex-wrap: wrap;
+	justify-content: center;
+	flex-direction: row;
+	margin: 0 0 5rem 0;
+
+}
+
+.box1{
+	 background: #fff;
+	position: relative;
+	width:18.5%;
+	height:22rem;
+	margin: 1rem 1rem 1rem 1rem;
+	 border-radius: 10px;
+    box-shadow: 1px 1px 5px 2px #ccc;
+	/* border: 0.5px solid var( --accent-color); */
+
+}
+.box1 img{
+	width:100%;
+	height:50%;
+	margin-top:.5rem; 
+}
+.box1 h1{
+	font-size: 1.2rem;
+	text-align: center;
+}
+.box1 h2{
+	font-size: 1rem;
+	text-align: center;
+}
+.box1 p{
+	font-size: .8rem;
+	text-align: center;
+	padding: .5rem;
+}
+ .btn_cart1{
+	position: absolute;
+	top: 92%;
+	left: 50%;
+	transform: translate(-50%, -50%);
+	    padding: 10px 23px;
+    border: none;
+    color: #fff;
+    font-size: 10px;
+    text-transform: uppercase;
+    letter-spacing: 1px;
+    border: 2px solid #fff;
+    width: 8rem;
+    background:  var(--primary-color);
+    -webkit-transition: 0.5s all;
+    -moz-transition: 0.5s all;
+    -o-transition: 0.5s all;
+    -ms-transition: 0.5s all;
+    transition: 0.5s all;
+}
+.btn_cart1:hover{
+	color: #fff;
+	background: var(--accent-color);
+	outline:none;
+}
+@media screen and (max-width: 800px) {
+	.mens_collections{
+	justify-content: space-around;
+	
+
+}
+	.box1{
+	position: relative;
+	width:42%;
+	height: 25rem;
+	
+}
+.box1 img{
+	width:100%;
+	height: 50%;
+}
+	 .btn_cart1{
+	top: 90%;
+	left: 50%;
+	 padding: 10px 15px;
+    font-size: 10px;
+    border: 2px solid #fff;
+    width: 12rem;
+   
+}
+}
+
+/* pagination section start here */
+.pagination_bottom{
+	margin: 8rem 0 5rem 0;
+}
+.text_brown{
+	color: var(--primary-color);
+}
+.page-item.active .page-link {
+    z-index: 3;
+    color: #fff;
+   background: var(--primary-color);
+    border-color: var(--primary-color);
+}
+
+.text_brown1{
+	color: var(--accent-color);
 }
